db initial commit